--- a/less/style.less
+++ b/less/style.less
@@ -1,1 +1,68 @@
-@import url('reset.css');
+@import "reset.less";
+@import "header.less";
+
+.fs(@px){
+	font-size: unit(@px / 37.5, rem);
+}
+
+.w(@px){
+	width: unit(@px / 37.5,rem);
+}
+
+.h(@px){
+	height: unit(@px/37.5,rem);
+}
+
+.lh(@px){
+	line-height: unit(@px / 37.5,rem);
+}
+
+/* margin */
+.mt(@px){
+	margin-top: unit(@px / 37.5, rem);
+}
+
+.mb(@px){
+	margin-bottom: unit(@px/37.5,rem);
+}
+
+.mr(@px){
+	margin-right: unit(@px/37.5,rem);
+}
+
+.ml(@px){
+	margin-left: unit(@px/37.5,rem);
+}
+
+/* padding */
+.pt(@px){
+	padding-top: unit(@px / 37.5, rem);
+}
+
+.pb(@px){
+	padding-bottom: unit(@px/37.5,rem);
+}
+
+.pr(@px){
+	padding-right: unit(@px/37.5,rem);
+}
+
+.pl(@px){
+	padding-left: unit(@px/37.5,rem);
+}
+
+.top(@px){
+	top: unit(@px/37.5,rem);
+}
+
+.left(@px){
+	left: unit(@px/37.5,rem);
+}
+
+.bottom(@px){
+	bottom: unit(@px/37.5,rem);
+}
+
+.right(@px){
+	right: unit(@px/37.5,rem);
+}
