--- a/less/header.less
+++ b/less/header.less
@@ -1,6 +1,13 @@
 .header{
 	.fs(24);
-	.h(67);
+	position: fixed;
+    left: 0;
+    right: 0;
+    width: 100%;
+    color: #fff;
+    .h(67);
+    z-index: 2;
+    .transition(all,0.3s,ease-in-out);
 	background: #ec8443;
 	#header__icon{
 		position: relative;
