--- a/less/homepage.less
+++ b/less/homepage.less
@@ -1,8 +1,8 @@
-#slidesshow{
+.slick-slide{
 	margin: 0;
     position: relative;
     width: 100%;
-    height: 420px;
+    height: 420px !important; 
     padding: 0px;
 
     .slide{
@@ -15,11 +15,11 @@
     		height: 100%;
 		    width: 100%;
 		    background-position: center center;
-		    &:first-child{
-				background-image: url('../images/slide_01.jpg');
+		    &.first{
+		    	background-image: url('../images/slide_02.jpg');
 		    }
-		    &:last-child{
-				background-image: url('../images/slide_02.jpg');
+		    &.second{
+		    	background-image: url('../images/slide_01.jpg');
 		    }
     	}
     	.slideTitle{
@@ -31,7 +31,7 @@
     		.pl(8);
     		.pr(8);
     		letter-spacing: 1px;
-    		font-weight: 300;
+    		font-weight: 400;
     		color: #fff;
 		    position: absolute;
 		    text-align: center;
