--- a/less/homepage.less
+++ b/less/homepage.less
@@ -24,14 +24,14 @@
     	}
     	.slideTitle{
     		top: 72px;
-    		.fs(35);
-    		.lh(50);
+    		.fs(30);
+    		.lh(40);
     		margin-top: 36px;
     		margin-bottom: 36px;
     		.pl(8);
     		.pr(8);
     		letter-spacing: 1px;
-    		font-weight: 400;
+    		font-weight: 300;
     		color: #fff;
 		    position: absolute;
 		    text-align: center;
@@ -39,10 +39,126 @@
 		    	.mt(5);
 		    	display: block;
 		    	color: #fff;
-			    .fs(18);
-			    .lh(26);
-			    letter-spacing: 2px;
+			    .fs(16);
+			    .lh(22);
+			    letter-spacing: 1px;
 		    }
     	}
     }
+}
+
+.dropdownWrapper{
+	background: #213F50;
+   	.pt(20);
+   	.pb(20);
+   	.top(314);
+   	width: 100%;
+   	position: absolute;
+   	.centerDropdown{
+   		width: 100%;
+	    max-width: 1000px;
+	    line-height: initial;
+	    text-align: center;
+	    .mt(10);
+	    .mb(10);
+	    .dropdown{
+	    	display: block;
+		    width: 90%;
+		    color: #333;
+		    background-color: #fff;
+		   	.h(48);
+		    border: 1px solid #d8d9da;
+		    .border-radius(5px);
+		    display: inline-block;
+		    vertical-align: top;
+		    text-align: left;
+		    .mt(20);
+		    .mr(5);
+		    .ml(5);
+		    .transition(all,0.6s,ease-in-out);
+		    cursor: pointer;
+		    select{
+		    	display: inline-block;
+		    	width: 80%;
+		    	margin: 8px 0 10px -41px;
+		    	padding: 4px 10px 0 44px;
+		    	background: none;
+		    	.fs(16);
+			    border: 1px solid transparent;
+			    .box-sizing(border-box);
+			    .appearance(none);
+			    color: #444;
+			    line-height: 1.3;
+			    vertical-align: top;
+			    cursor: pointer;
+			    letter-spacing: 1px;
+		    }
+		    &:first-child{
+		    	.mt(0);
+		    }
+		    &:after{
+		    	content: '';
+			    font-size: .3em;
+			    height: 1em;
+			    width: 1em;
+			    display: block;
+			    border: 2px solid #546476;
+			    border-left-color: transparent;
+			    border-top-color: transparent;
+			    transform: rotate(45deg);
+			    .mt(10);
+			    .mr(16);
+			    float: right;
+		    }
+	    }
+	    .dropdown:before{
+		    content: "";
+		    display: inline-block;
+		    margin: 12px 0 0 11px;
+		    .mt(0);
+		    .ml(11);
+		    .h(25);
+		    .w(27);
+	    }
+	    .dropdown.evtType{
+	    	&:before{
+	    		background: url(../images/search_icon-01.png) 0 3px no-repeat;	
+	    		background-size: 20px;
+	    	}
+	    }
+	    .dropdown.location{
+			&:before{
+				background: url(../images/search_icon-02.png) 0 3px no-repeat;
+		    	background-size: 20px;
+			}
+	    }
+	    .dropdown.capacity{
+	    	&:before{
+	    		background: url(../images/search_icon-03.png) 0 3px no-repeat;
+   	 			background-size: 20px;
+	    	}
+	    }
+	    .keySearch{
+			width: 86%;
+			.mt(20);
+			padding: 0 0 0 15px;
+			.fs(16);
+			.h(48);
+			padding: 0 5px 0 10px;
+			.border-radius(5px);
+			.transition(all,0.8s,ease-in-out);
+			border: none;	    
+		}
+		.orangeBtn{
+			.mt(20);
+    		width: 90%;
+			background: #ff6700;
+		    color: #fff;
+		    border: none;
+		    padding: 10px 30px;
+		    .h(50);
+		   	.border-radius(5px);
+		    .transition(all,0.1s,ease-in-out);
+		}
+   	}
 }
