--- a/less/mixin.less
+++ b/less/mixin.less
@@ -23,3 +23,11 @@
     -ms-border-radius: @prop;
     border-radius: @prop;
 }
+
+.translate(@x,@y){
+	-webkit-transform: translate(@x,@y);
+	-moz-transform: translate(@x,@y);
+	-o-transform: translate(@x,@y);
+	-ms-transform: translate(@x,@y);
+	transform: translate(@x,@y);
+}
