custom homepage galleryThumb dom structure

--- a/less/homepage.less
+++ b/less/homepage.less
@@ -51,7 +51,7 @@
 	background: #213F50;
    	.pt(20);
    	.pb(20);
-   	.top(314);
+   	top: 314px;
    	width: 100%;
    	position: absolute;
    	.centerDropdown{
@@ -184,6 +184,23 @@
 	    text-align: center;
 	    display: inline-block;
 	    margin: 20px 10px;
+	    h3{
+	    	color: #000;
+    		margin: 20px 0;
+    		.fs(17);
+    		.mb(15);
+	    }
+	    img{
+	    	margin: 0 auto;
+	    }
+	    a{
+	    	color: #ec8443;
+		    text-decoration: none;
+		    .fs(15);
+		    display: block;
+		    margin: 20px 0;
+		    .mt(15);
+	    }
 	}
 	.galleryshow{
 		margin: 0 auto;
