--- a/less/homepage.less
+++ b/less/homepage.less
@@ -251,3 +251,22 @@
 	    }
 	}
 }
+
+.selected-places{
+	.iconHouse{
+		background-image: url(../images/sprites.png);
+	    background-size: 155px;
+	    background-repeat: no-repeat;
+	    background-position: 0 -235px;
+	    width: 39px;
+	   	height: 43px;
+	   	margin: 0 auto;
+	    .mt(30);
+	    .mb(10);
+	    & ~ h3{
+			color: #6d6e71;
+    		.mt(10);
+    		.fs(18);
+	    }
+	}
+}
