--- a/less/style.less
+++ b/less/style.less
@@ -82,6 +82,32 @@
     .transition(all,0.5s,ease-in-out);
 }
 
+.sectionWrapper{
+	width: 95%;
+    max-width: 1200px;
+    margin: 0 auto;
+    .mt(40);
+    .mb(40);
+    text-align: center;
+}
+
+.rule{
+	width: 100%;
+    border-bottom: #d1d1d1 1px solid;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    margin: 0;
+    .mt(40);
+    .mb(40);
+}
+
+hr{
+	box-sizing: content-box;
+    height: 0;
+    overflow: visible;
+}
+
 form{
 	display: block;
 	margin-top: 0;
