add selectedPlaces component

--- a/less/homepage.less
+++ b/less/homepage.less
@@ -269,4 +269,29 @@
     		.fs(18);
 	    }
 	}
+	.imgUnitLong{
+		width: 80%;
+		display: inline-block;
+    	vertical-align: top;
+    	.mt(20);
+    	.mb(20);
+    	.ml(10);
+    	.mr(10);
+    	.imgLong{
+    		background-position: center center;
+		    background-size: 570px auto;
+		    background-repeat: no-repeat;
+		    width: 100%;
+		    .h(270);
+		    .transition(all,0.7s,ease-in-out);
+    	}
+    	h3{
+    		text-align: right;
+		    color: gray;
+		   	.fs(18);
+		    margin: 10px 0;
+		    font-family: sans-serif;
+		    .transition(all,0.3s,ease-in-out);
+    	}
+	}
 }
