--- a/less/homepage.less
+++ b/less/homepage.less
@@ -295,3 +295,14 @@
     	}
 	}
 }
+
+.promo{
+    width: 100%;
+    margin: 30px 0;
+    text-align: center;
+    background-position: center center;
+    img{
+    	display: block;
+    	width: 100%;
+    }
+}
