including usesSelect widget in other components

--- a/less/style.less
+++ b/less/style.less
@@ -89,6 +89,11 @@
     .mt(40);
     .mb(40);
     text-align: center;
+    h1{
+    	.mt(22);
+    	.mb(22);
+    	.fs(30);
+    }
 }
 
 .rule{
@@ -100,6 +105,10 @@
     margin: 0;
     .mt(40);
     .mb(40);
+}
+
+h1,h2,h3,h4,h5{
+	color: #6d6e71;
 }
 
 a{
