--- a/less/homepage.less
+++ b/less/homepage.less
@@ -367,3 +367,54 @@
 	    }
 	}
 }
+
+.blog{
+	background: #ec8443;
+    width: 100%;
+    text-align: center;
+    padding: 1px 0 20px;
+    .transition(all,0.5s,ease-in-out);
+    .iconBlog{
+    	background-image: url(../images/sprites.png);
+	    background-size: 155px;
+	    background-repeat: no-repeat;
+	    background-position: 0 -282px;
+	    width: 31px;
+	    height: 42px;
+	    margin: 0 auto;
+	    & ~ h3{
+	    	color: #FFF;
+	    	.fs(18);
+	    	.mt(21);
+	    	.mb(21);
+	    }
+    }
+    .blogUnit{
+    	width: 95%;
+    	border-bottom: 1px solid #e56617;
+   	 	margin: 0 auto;
+   	 	.mb(40);
+    	text-align: center;
+    	.blogImg{
+    		width: 100%;
+	    	max-width: 350px;
+	    	.h(230);
+	    	background-size: cover;
+	    	& ~ h3{
+	    		color: #fff;
+	    		.fs(18);
+	    		.mt(21);
+	    		.mb(21);
+	    		letter-spacing: 1px;
+	    	}
+    	}
+    	p{
+    		.fs(15);
+    		.lh(23);
+    		color: #fff;
+		    width: 100%;
+		   	height: 90px;
+		    overflow: hidden;
+    	}
+    }
+}
