add load-more-post btn

--- a/less/homepage.less
+++ b/less/homepage.less
@@ -417,4 +417,18 @@
 		    overflow: hidden;
     	}
     }
+    .whiteOutlineBtn{
+    	background: none;
+	    color: #fff;
+	    border: 1px solid #fff;
+	    .pt(10);
+	    .pb(10);
+	    .pl(30);
+	    .pr(30);
+	   	.h(50);
+	   	.mb(10);
+	    .border-radius(25px);
+	    .transition(all,0.1s,ease-in-out);
+	    .fs(16);
+    }
 }
