--- a/less/homepage.less
+++ b/less/homepage.less
@@ -456,3 +456,101 @@
     	.fs(18);
 	}
 }
+
+.footer{
+	background: #2b211e;
+	width: 100%;
+	.pt(1);
+	.pb(1);
+	.facebook{
+		background-image: url(../images/sprites.png);
+	    background-size: 155px;
+	    background-repeat: no-repeat;
+	    background-position: 0 -371px;
+	    width: 38px;
+	    height: 38px;
+	    display: inline-block;
+	    margin: 0 20px 11px 0;
+	}
+	.email{
+		background-image: url(../images/sprites.png);
+	    background-size: 155px;
+	    background-repeat: no-repeat;
+	    background-position: 0 -455px;
+	    width: 38px;
+	    height: 38px;
+	    display: inline-block;
+	    margin: 0 20px 11px 0;
+	}
+	.sectionWrapper{
+		width: 80%;
+		text-align: left;
+	}
+	div{
+		font-size: 0.9em;
+	    display: inline-block;
+	    vertical-align: top;
+	    text-align: left;
+	    margin: 0 2% 0;
+	    a{
+	    	text-decoration: none;
+	    	color: #d1d1d1;
+	    	.fs(16);
+	    }
+	    small{
+	    	display: block;
+		    color: #a0a1a4;
+		    text-align: left;
+		    max-width: 450px;
+		    word-break: break-all;
+		    line-height: 1.5em;
+		    margin: 0;
+		    .mb(20);
+		    .fs(10);
+	    }
+	}
+	ul{
+		color: #b7b7b7;
+	    list-style: none;
+	    text-align: left;
+	    padding: 0;
+	    display: inline-block;
+	    vertical-align: top;
+	    margin: 0 5% 0 0;
+	    .mb(40);
+	    &.contactUs{
+	    	display: block;
+	    }
+	    li{
+	    	.pt(10);
+	    	.pb(10);
+	    	.fs(14);
+	    	&.footerLiTitle{
+				.fs(16);
+	    		font-weight: bold;
+	    		color: #9b8579;
+	    	}
+	    }
+	}
+	aside{
+		margin: 0;
+		.mb(30);
+		background-image: url(../images/sprites.png);
+	    background-size: 155px;
+	    background-repeat: no-repeat;
+	    background-position: 0 -329px;
+	    width: 155px;
+	    height: 38px;
+	}
+	.footerContent{
+		display: flex;
+		flex-direction: column-reverse;
+		width: 100%;
+		text-align: left;
+		vertical-align: top;
+		p{
+			.mt(16);
+			.mb(16);
+		}
+	}
+}
