add searchForm component

--- a/less/style.less
+++ b/less/style.less
@@ -2,6 +2,7 @@
 @import "reset.less";
 @import "header.less";
 @import "homepage.less";
+@import "search.less";
 
 .fs(@px){
 	font-size: unit(@px / 37.5, rem);
@@ -105,6 +106,15 @@
     margin: 0;
     .mt(40);
     .mb(40);
+}
+
+body{
+    font-family: "微軟正黑體","Microsoft Jhenghei","Helvetica Neue","Helvetica",sans-serif,serif;
+    line-height: 1.5;
+    background-color: #f3f3f3;
+    color: #666;
+    height: 100%;
+    margin-bottom: 280px;
 }
 
 h1,h2,h3,h4,h5{
