--- a/less/mixin.less
+++ b/less/mixin.less
@@ -31,3 +31,10 @@
 	-ms-transform: translate(@x,@y);
 	transform: translate(@x,@y);
 }
+
+.background-size(@size){
+	-moz-background-size: @size;
+    -webkit-background-size: @size;
+    -o-background-size: @size;
+    background-size: @size;
+}
