add searchForm component

--- a/less/style.less
+++ b/less/style.less
@@ -108,6 +108,26 @@
     .mb(40);
 }
 
+.btn{
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    border-radius: 4px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 body{
     font-family: "微軟正黑體","Microsoft Jhenghei","Helvetica Neue","Helvetica",sans-serif,serif;
     line-height: 1.5;
