--- a/less/search.less
+++ b/less/search.less
@@ -46,4 +46,100 @@
 	    .pl(15);
 	    .pr(15);
 	}
+
+	.mT100{
+		.mt(100);
+		.searchNavbar{
+			background-color: #fff;
+    		.pt(26);
+    		.pb(26);
+    		.pl(26);
+    		.pr(26);
+    		.nav{
+    			margin-bottom: 0;
+    			padding-left: 0;
+    			list-style: none;
+    			&:before{
+    				content: " ";
+    				display: table;
+    			}
+    			&>li{
+    				.mt(10);
+    				.fs(15);
+    				position: relative;
+    				display: block;
+    				span{
+    					.fs(15);
+    				}
+	    			.searchSelect{
+	    				.border-radius(2px);
+	    				background: #f4f5f2;
+	    				position: relative;
+	    				.fs(15);
+	    				&:not(#legacy) select{
+	    					cursor: pointer;
+						    background: transparent;
+						    line-height: 1;
+						    border: 0;
+						   	.appearance(none);
+						    text-indent: 1px;
+						    text-overflow: '';
+						    width: 100%;
+	   	 					color: #F08646;
+	    					.pt(11);
+	    					.pb(11);
+	    					.pl(10);
+	    					.pr(10);
+	    				}
+	    			}
+	    			label{
+	    				display: inline-block;
+	    				.ml(5);
+    					.mb(5);
+    					font-weight: 700;
+	    			}
+	    			input[type="text"]{
+	    				display: block;
+					    width: 100%;
+					    .h(34);
+					    .pt(6);
+					    .pb(6);
+					    .pl(12);
+					    .pr(12);
+					    .fs(14);
+					    .lh(14);
+					    color: #555;
+					    background-color: #fff;
+					    background-image: none;
+					    border: 1px solid #ccc;
+					    border-radius: 4px;
+					    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+					    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+					    -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+					    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+					    box-sizing: border-box;
+	    			}
+    			}
+    		}
+			.btnSearch{
+				background-color: #F08646;
+				color: #fff;
+			}
+			.mTD20 {
+    			.mt(20);
+    			.mb(20);
+			}
+			.btn-block{
+				display: block;
+			    width: 100%;
+			    padding-left: 0;
+			    padding-right: 0;
+			}
+		}
+	}
+
+	.col-xs-12{
+		width: 100%;
+		float: left;
+	}
 }
