searchForm little modifications

--- a/less/homepage.less
+++ b/less/homepage.less
@@ -83,7 +83,8 @@
 		    	display: inline-block;
 		    	width: 80%;
 		    	margin: 8px 0 10px -41px;
-		    	padding: 4px 10px 0 44px;
+		    	padding: 8px 10px 0 44px;
+		    	.pt(7);
 		    	background: none;
 		    	.fs(16);
 			    border: 1px solid transparent;
@@ -116,11 +117,11 @@
 	    .dropdown:before{
 		    content: "";
 		    display: inline-block;
-		    margin: 12px 0 0 11px;
-		    .mt(0);
+		    .mt(12);
 		    .ml(11);
-		    .h(25);
+		    .h(27);
 		    .w(27);
+		    vertical-align: top;
 	    }
 	    .dropdown.evtType{
 	    	&:before{
