searchSelect add :before style

--- a/less/search.less
+++ b/less/search.less
@@ -90,6 +90,20 @@
 	    					.pl(10);
 	    					.pr(10);
 	    				}
+	    				&:before{
+	    					content: "";
+						    position: absolute;
+						    width: 0;
+						    height: 0;
+						    margin-top: -4px;
+						    left: auto;
+						    right: 10px;
+						    top: 50%;
+						    bottom: auto;
+						    border-left: 4px solid transparent;
+						    border-right: 4px solid transparent;
+						    border-top: 7.2px solid #FF9C38;
+	    				}
 	    			}
 	    			label{
 	    				display: inline-block;
