add searchResults component

--- a/less/search.less
+++ b/less/search.less
@@ -151,6 +151,85 @@
 		}
 	}
 
+	.mT20{
+		.mt(20);
+	}
+
+	.mobileSearchResltArea{
+		overflow: hidden;
+	    position: relative;
+	    background: #fff;
+	    margin: 0;
+	    .mb(20);
+	   	.border-radius(3px);
+	    width: 100%;
+		.searchProgramImgArea{
+			width: 100%;
+		   	height: 250px;
+		    background-size: cover;
+		    background-position: center center;
+		    background-repeat: no-repeat;
+		}
+		.searchProgramContentArea{
+		   .pt(10);
+		   .pr(20);
+		   .pb(0);
+		   .pl(20);
+			h2{
+		    	color: #565a5c;
+			   	.fs(18);
+			    .lh(22);
+			    .mt(20);
+			    .mb(10);
+			    font-weight: 500;
+		    }
+		    .saerchProgramIconArea{
+		    	.mb(20);
+		    	.mD5{
+		    		.mb(5);
+		    		.fs(0);
+		    		.programIcon{
+		    			.fs(14);
+					    .mr(20);
+					    .lh(20);
+					    min-height: 20px;
+					    color: #8a4705;
+					    vertical-align: middle;
+					    img{
+					    	.w(20);
+    						.mr(10);
+    						vertical-align: middle;
+					    }
+					    a{
+					    	.fs(14);
+						   	.mr(20);
+						    .lh(20);
+						    min-height: 20px;
+						    color: #8a4705;
+						    vertical-align: middle;
+					    }
+					    a.use{
+					    	margin-right:0px !important;
+					    }
+					    b{
+					    	.ml(2);
+					    	.mr(2);
+					    }
+		    		}
+		    	}
+    	 		.btnHour{
+			    	color: #fff;
+				    background-color: #F08646;
+				    .pt(5);
+				    .pb(5);
+				    .pl(15);
+				    .pr(15);
+				    .fs(16);
+			    }
+		    }
+		}
+	}
+
 	.col-xs-12{
 		width: 100%;
 		float: left;
