add place searchBtn component

--- a/less/style.less
+++ b/less/style.less
@@ -3,6 +3,7 @@
 @import "header.less";
 @import "homepage.less";
 @import "search.less";
+@import "place.less";
 
 .fs(@px){
 	font-size: unit(@px / 37.5, rem);
@@ -168,6 +169,18 @@ img{
 
 .mT20{
     .mt(20);
+}
+
+.col-xs-12{
+    width: 100%;
+    float: left;
+}
+
+.container{
+    margin-right: auto;
+    margin-left: auto;
+    .pl(15);
+    .pr(15);
 }
 
 /* navbar */
