--- a/less/place.less
+++ b/less/place.less
@@ -22,4 +22,68 @@
 		    }
 		}
 	}
+	.mobileProgramArea{
+	    background-color: #fff;
+	    .fs(18);
+	    .pt(10);
+	    .pb(30);
+	    .pl(30);
+	    .pr(30);
+	    .mb(60);
+		.programAreaTitle{
+			border-bottom: #9e9e9e 1px solid;
+			h1,h2{
+				.mt(20);
+				.mb(10);
+				font-weight: 500;
+				line-height: 1.2;
+			}
+			h1{
+				.fs(18);
+			}
+			h2{
+				.fs(24);
+    			color: #999;
+			}
+		}
+		.programShareArea {
+		    width: 100%;
+		    .pt(10);
+		    .pb(10);
+		    float: left;
+		}
+		.tags{
+			.mr(20);
+		    color: #9D9D9D;
+		   	.lh(25);
+		    min-height: 25px;
+		    vertical-align: middle;
+			img{
+				.w(20);
+			   	.mb(8);
+			   	.mr(8);
+			   	vertical-align: middle;
+			}
+			a{
+				color: #8a4705;
+    			.fs(15);
+			}
+		}
+		h2{
+			span a{
+				.fs(14);
+			    color: #31b0d5;
+			    margin-left: 30px;
+			}
+		}
+	}
+	.btnHour {
+	    color: #fff;
+	    background-color: #F08646;
+	    .pt(5);
+	    .pb(5);
+	    .pl(15);
+	    .pr(15);
+	    .fs(16);
+	}
 }
