--- a/less/place.less
+++ b/less/place.less
@@ -76,6 +76,30 @@
 			    margin-left: 30px;
 			}
 		}
+		/* place detail */
+		.programSiteTime{
+			.pt(20);
+			.eachProgramTitle{
+				color: #999;
+			   	.fs(17);
+			    letter-spacing: 2px;
+			    border-bottom: #D0D0D0 solid 1px;
+			   	.pb(10);
+			    .mb(10);
+			    font-weight: 500;
+			    line-height: 1.1;
+			    & ~ p{
+			    	.mb(10);
+			    	.fs(14);
+			    	line-height: 1.5;
+			    }
+			}
+			h5{
+				.fs(14);
+				.mt(10);
+				.mb(10);
+			}
+		}
 	}
 	.btnHour {
 	    color: #fff;
