--- a/less/place.less
+++ b/less/place.less
@@ -88,17 +88,17 @@
 			    .mb(10);
 			    font-weight: 500;
 			    line-height: 1.1;
-			    & ~ p{
-			    	.mb(10);
-			    	.fs(14);
-			    	line-height: 1.5;
-			    }
 			}
-			h5{
-				.fs(14);
-				.mt(10);
-				.mb(10);
-			}
+		}
+ 		p{
+	    	.mb(10);
+	    	.fs(14);
+	    	line-height: 1.5;
+	    }
+		h5{
+			.fs(14);
+			.mt(10);
+			.mb(10);
 		}
 	}
 	.btnHour {
