style for available hours dom

--- a/less/place.less
+++ b/less/place.less
@@ -100,6 +100,36 @@
 			.mt(10);
 			.mb(10);
 		}
+		.calendar{
+			.weekArea{
+				float: left;
+			    width: 12%;
+			    text-align: center;
+			    font-size: 5px;
+			    .week {
+				    color: #FF9C38;
+				    .fs(18);
+				}
+			 	.time{
+			    	height: 32px;
+			    }
+				.programAvailable {
+				    background-color: #F08646;
+				    height: 8px;
+				    margin: 0 1px;
+				}
+				.calendarMargin {
+				    height: 8px;
+				    border-bottom: 1px #f3f3f3 solid;
+				}
+				.nonavailable {
+				    background-color: #dce0e0;
+				    height: 8px;
+				    margin: 0 1px;
+				    position: relative;
+				}
+			}
+		}
 	}
 	.btnHour {
 	    color: #fff;
