--- a/less/place.less
+++ b/less/place.less
@@ -112,6 +112,7 @@
 				}
 			 	.time{
 			    	height: 32px;
+			    	.fs(12);
 			    }
 				.programAvailable {
 				    background-color: #F08646;
