add placeSpace block

--- a/less/place.less
+++ b/less/place.less
@@ -131,6 +131,44 @@
 				}
 			}
 		}
+		.programSpace{
+			.spaceLogo{
+				.pt(20);
+				.pb(20);
+				.pl(10);
+				.pr(10);
+				h5 a{
+					.fs(19);
+					.lh(25);
+					color: #72716d;
+					font-weight: 500;
+				}
+			}
+			.btnBook{
+				cursor: pointer;
+			    background-color: #F08646;
+			    color: #fff;
+			    .pt(10);
+			    .pb(10);
+			    .pl(20);
+			    .pr(20);
+			    .fs(18);
+			    .border-radius(4px);
+			}
+			.programRemindArea {
+				.mt(40);
+				.mb(40);
+				.pl(20);
+				.pr(20);
+				p{
+					.fs(16);
+					b{
+						color: #FF9C38;
+    					border-bottom: #FF9C38 dotted 1px;
+					}
+				}
+			}
+		}
 	}
 	.btnHour {
 	    color: #fff;
