--- a/less/style.less
+++ b/less/style.less
@@ -129,6 +129,17 @@
     user-select: none;
 }
 
+.text-center{
+    text-align: center;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+}
+
 body{
     font-family: "微軟正黑體","Microsoft Jhenghei","Helvetica Neue","Helvetica",sans-serif,serif;
     line-height: 1.5;
