--- a/less/place.less
+++ b/less/place.less
@@ -30,6 +30,16 @@
 	    .pl(30);
 	    .pr(30);
 	    .mb(60);
+    	.eachProgramTitle{
+			color: #999;
+		   	.fs(17);
+		    letter-spacing: 2px;
+		    border-bottom: #D0D0D0 solid 1px;
+		   	.pb(10);
+		    .mb(10);
+		    font-weight: 500;
+		    line-height: 1.1;
+		}
 		.programAreaTitle{
 			border-bottom: #9e9e9e 1px solid;
 			h1,h2{
@@ -79,16 +89,6 @@
 		/* place detail */
 		.programSiteTime{
 			.pt(20);
-			.eachProgramTitle{
-				color: #999;
-			   	.fs(17);
-			    letter-spacing: 2px;
-			    border-bottom: #D0D0D0 solid 1px;
-			   	.pb(10);
-			    .mb(10);
-			    font-weight: 500;
-			    line-height: 1.1;
-			}
 		}
  		p{
 	    	.mb(10);
@@ -178,5 +178,34 @@
 	    .pl(15);
 	    .pr(15);
 	    .fs(16);
+	}
+	.ProgramDevice{
+		.programDeviceArea{
+			width: 100%;
+			float: left;
+			.programDeviceImg {
+				width: 20%;
+				float: left;
+				img{
+					.w(45);
+				}
+				.deviceNoFeeItem {
+					.fs(14);
+					color: #9D9D9D;
+					.mt(-10);
+					.mb(10);
+				}
+			}
+			.programDevicenote {
+				float: left;
+			    color: #888;
+			   	.lh(23);
+			    .mt(10);
+			    width: 80%;
+			    .fs(14);
+			    .pt(5);
+			    .pl(20);
+			}
+		}
 	}
 }
