--- a/less/style.less
+++ b/less/style.less
@@ -133,6 +133,14 @@
     text-align: center;
 }
 
+.text-left{
+    text-align: left;
+}
+
+.text-right{
+    text-align: right;
+}
+
 *{
     margin: 0;
     padding: 0;
