create Footer common component

--- a/less/style.less
+++ b/less/style.less
@@ -4,6 +4,7 @@
 @import "homepage.less";
 @import "search.less";
 @import "place.less";
+@import "footer.less";
 
 .fs(@px){
 	font-size: unit(@px / 37.5, rem);
@@ -11,6 +12,10 @@
 
 .w(@px){
 	width: unit(@px / 37.5,rem);
+}
+
+.mh(@px){
+    max-height: unit(@px/37.5,rem);
 }
 
 .h(@px){
