--- a/less/place.less
+++ b/less/place.less
@@ -1,4 +1,5 @@
 .single-place{
+	position: relative;
 	.searchResultNavBar{
 		max-height: 80vh;
 		.btnReset{
@@ -29,7 +30,7 @@
 	    .pb(30);
 	    .pl(30);
 	    .pr(30);
-	    .mb(60);
+	    .mb(150);
     	.eachProgramTitle{
 			color: #999;
 		   	.fs(17);
@@ -178,6 +179,9 @@
 	    .pr(20);
 	    .fs(18);
 	    .border-radius(4px);
+	}
+	.btnEdge{
+		.fs(14);
 	}
 	.ProgramDevice{
 		.programDeviceArea{
