add fixedButton common component

--- a/less/style.less
+++ b/less/style.less
@@ -134,6 +134,18 @@
     user-select: none;
 }
 
+.fixed-bottom, .fixed-bottom:focus {
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    width: 90px;
+    height: 36px;
+    z-index: 10;
+    margin: 8px 10px;
+    background-color: #F08646;
+    color: #FFF;
+}
+
 .text-center{
     text-align: center;
 }
