add imgLiquidFill div

--- a/less/place.less
+++ b/less/place.less
@@ -57,6 +57,38 @@
     			color: #999;
 			}
 		}
+		.placeGallery{
+			.imgLiquidFill {
+				width: 100%;
+			   	.h(200);
+			    display: block;
+			    background-size: cover;
+			    background-position: center center;
+			    background-repeat: no-repeat;
+			}
+			.mobileProgramPhotoArea {
+				width: 100%;
+			    background-color: #e3e3e3;
+			    display: inline-block;
+			    .mt(5);
+			    .mobileProgramPhotoBarBtn{
+			    	float: left;
+				   	.h(100);
+				   	.fs(40);
+				   	img{
+				   		.mt(40);
+				   		.mb(40);
+    					.w(30);
+				   	}
+				   	&.leftBtn{
+				   		float: left;
+				   	}
+				   	&.rightBtn{
+				   		float: right;
+				   	}
+			    }
+			}
+		}
 		.programShareArea {
 		    width: 100%;
 		    .pt(10);
