place gallery single image binding click event

--- a/less/place.less
+++ b/less/place.less
@@ -87,6 +87,30 @@
 				   		float: right;
 				   	}
 			    }
+			    #programPhotoBar {
+			    	float: left;
+				    margin: 0 2%;
+				    overflow-x: auto;
+				    overflow-y: hidden;
+				    white-space: nowrap;
+				   	.w(210);
+				   	.h(100);
+			    }
+			    .programPhotoThumbWrapper{
+			    	width: 100px;
+			    	display: inline-block;
+			    	.mr(4);
+					.programPhotoThumb{
+						float: left;
+    					.mt(15);
+    					.mr(5);
+				    	.w(100);
+					   	.h(70);
+					    background-size: cover;
+					    background-position: center center;
+					    background-repeat: no-repeat;
+				    }
+			    }
 			}
 		}
 		.programShareArea {
