--- a/less/place.less
+++ b/less/place.less
@@ -97,13 +97,12 @@
 				   	.h(100);
 			    }
 			    .programPhotoThumbWrapper{
-			    	width: 100px;
+			    	.w(100);
 			    	display: inline-block;
 			    	.mr(4);
 					.programPhotoThumb{
 						float: left;
     					.mt(15);
-    					.mr(5);
 				    	.w(100);
 					   	.h(70);
 					    background-size: cover;
