add monthly calendar component

--- a/less/style.less
+++ b/less/style.less
@@ -6,6 +6,7 @@
 @import "place.less";
 @import "footer.less";
 @import "bill.less";
+@import "calendar.less";
 
 .fs(@px){
 	font-size: unit(@px / 37.5, rem);
@@ -196,6 +197,10 @@ form{
 
 img{
 	border-style: none;
+}
+
+ul{
+    list-style: none;
 }
 
 /* common elements style */
