--- a/less/calendar.less
+++ b/less/calendar.less
@@ -67,5 +67,9 @@
         margin-bottom: 5px;
       }
     }
+    .selectedDate {
+      border: 1px solid #888;
+      background-color: #FFAD5C;
+    }
   }
 }
