--- a/less/calendar.less
+++ b/less/calendar.less
@@ -1,8 +1,6 @@
-.bookCalendar{
-  .pt(10);
-  .pb(10);
-  .calendarHeader{
-    h4{
+/* common */
+.calendarHeader{
+  h4{
       line-height: 1;
       float: left;
       .mt(10);
@@ -10,6 +8,11 @@
       .fs(30);
       color: #72716d;
       font-weight: bold;
+      span{
+        .fs(30);
+        margin: 0;
+        padding: 0;
+      }
     }
     span{
       .mt(6);
@@ -18,6 +21,49 @@
       float: left;
       vertical-align: baseline;
     }
+}
+/* bookTimeList */
+.bookTimeList{
+  .topArrowGray {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: auto;
+    right: 50%;
+    top: 0px;
+    border-left: 16px solid transparent;
+    border-right: 17px solid transparent;
+    margin: 0px -18px 0 0;
+    border-top: 15px solid #dddddd;
+    z-index: 1;
+  }
+  .topArrow:before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: auto;
+    right: 50%;
+    top: -2px;
+    border-left: 15px solid transparent;
+    border-right: 13px solid transparent;
+    z-index: 900;
+    margin: 0 -15px 0 0;
+    border-top: 14px solid #fff;
+  }
+  .bookProgramTime{
+    .pt(25);
+    position: relative;
+    width: 100%;
+    display: inline-block;
+  }
+}
+/* bookCalendar */
+.bookCalendar{
+  .pt(10);
+  .pb(10);
+  .calendarHeader{
     ul{
       float:right;
       li{
