create billHeader component

--- a/less/bill.less
+++ b/less/bill.less
@@ -1,4 +1,64 @@
 .bill{
+	.bookProgramTitle {
+			border-bottom: 2px solid #dee0dc;
+			.pb(20);
+			position: relative;
+			h1{
+				.fs(33);
+				.mt(30);
+				.mb(10);
+				.pt(10);
+			}
+			h2{
+				.fs(23);
+				color: #888;
+				margin: 0;
+				.lh(35);
+			}
+			.btnHour{
+				color: #fff;
+				background-color: #F08646;
+				.pt(5);
+				.pb(5);
+				.pl(15);
+				.pr(15);
+				.fs(16);
+			}
+	}
+	.steps{
+		h3{
+			.mt(20);
+			.mb(10);
+			.fs(27);
+		}
+		.paymentWrapper{
+			width: 100%;
+			article{
+				width: 100%;
+				.pt(20);
+				.pb(20);
+				.pl(10);
+				.pr(10);
+				display: inline-block;
+				vertical-align: top;
+				max-width: 250px;
+				img{
+					width: 100%;
+   				max-width: 166px;
+					vertical-align: middle;
+				}
+				h3{
+					color: #000;
+					.fs(18);
+				}
+				p{
+					color: #58595b;
+					.fs(16);
+					line-height: 1.6em;
+				}
+			}
+		}
+	}
 	.navGary{
 		box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 5px;
 	    background-color: #fff;
