--- a/less/style.less
+++ b/less/style.less
@@ -332,3 +332,35 @@ ul{
     padding-left: 15px;
     padding-right: 15px;
 }
+
+.bottomArrowWhite {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: auto;
+    right: 50%;
+    top: auto;
+    bottom: -15px;
+    border-left: 16px solid transparent;
+    border-right: 17px solid transparent;
+    margin: 0px -18px 0 0;
+    border-top: 15px solid #dddddd;
+    z-index: 1;
+}
+
+.bottomArrow:before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: auto;
+    right: 50%;
+    top: auto;
+    bottom: -14px;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    z-index: 900;
+    margin: 0 -15px 0 0;
+    border-top: 15px solid #fff;
+}
