create appBill components

--- a/less/bill.less
+++ b/less/bill.less
@@ -1,4 +1,6 @@
 .bill{
+	position: relative;
+	.pb(200);
 	.bookProgramTitle {
 			border-bottom: 2px solid #dee0dc;
 			.pb(20);
@@ -57,6 +59,87 @@
 					line-height: 1.6em;
 				}
 			}
+		}
+	}
+	.form{
+		margin: 0;
+    outline: none;
+    color: #666;
+		fieldset{
+			display: block;
+			.pt(25);
+			.pl(30);
+			.pr(30);
+			.pb(5);
+			border: none;
+			background: rgba(255,255,255,.9);
+		}
+		section{
+			.mb(25);
+		}
+		label{
+			display: block;
+			.mb(6);
+			.lh(19);
+			font-weight: 400;
+			border-radius: 0;
+			font-size: 100%;
+			text-align: left;
+			white-space: normal;
+			color: inherit;
+		}
+		hr{
+			.mt(20);
+			.mb(20);
+			.ml(0);
+			.mr(0);
+			border: 0;
+    	border-top: 1px solid #eee !important;
+		}
+		h3{
+			.fs(18);
+			.mb(12);
+		}
+		h4{
+			.fs(14);
+			font-weight: 700;
+			.mb(20);
+		}
+		.priceInfo{
+			color: black;
+    	.fs(16);
+    	font-weight: 400;
+    	line-height: 32px;
+		}
+		.coupon{
+			.mt(15);
+			.mb(10);
+		}
+		.input-code{
+			width: 100%;
+    	min-height: 33px;
+			.fs(16);
+    	border: #999 1px solid;
+			.pl(5);
+		}
+		#btnCode{
+			background-color: #F08646;
+    	color: #FFF;
+    	border-radius: 2px;
+		}
+		.total{
+			color: #F08646;
+		}
+		.confirmInfo{
+			.mt(20);
+			.fs(14);
+			.lh(23);
+			font-weight: 600;
+		}
+		.btnSearch{
+			.border-radius(18px);
+			background-color: #F08646;
+    	color: #fff;
 		}
 	}
 	.navGary{
