--- a/less/style.less
+++ b/less/style.less
@@ -170,7 +170,7 @@
 body{
     font-family: "微軟正黑體","Microsoft Jhenghei","Helvetica Neue","Helvetica",sans-serif,serif;
     line-height: 1.5;
-    background-color: #f3f3f3;
+    background-color: #f3f3f3 !important;
     color: #666;
     height: 100%;
     margin-bottom: 280px;
@@ -233,6 +233,14 @@ ul{
 
 .mT20{
     .mt(20);
+}
+
+.mB100{
+    .mb(100);
+}
+
+.mB50{
+    .mb(50);
 }
 
 .col-xs-12{
@@ -313,24 +321,6 @@ ul{
             display: none;
         }
     }
-}
-
-.col-xs-5 {
-    float: left;
-    width: 41.66666667%;
-    position: relative;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.col-xs-6 {
-    float: left;
-    width: 50%;
-    position: relative;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
 }
 
 .bottomArrowWhite {
