fixing some style issues

--- a/less/homepage.less
+++ b/less/homepage.less
@@ -109,7 +109,7 @@
 			    border-left-color: transparent;
 			    border-top-color: transparent;
 			    transform: rotate(45deg);
-			    .mt(10);
+			    .mt(14);
 			    .mr(16);
 			    float: right;
 		    }
@@ -418,6 +418,9 @@
 		   	height: 90px;
 		    overflow: hidden;
     	}
+			p:hover{
+				text-decoration: none !important;
+			}
     }
     .whiteOutlineBtn{
     	background: none;
