fixing style issue

--- a/less/bill.less
+++ b/less/bill.less
@@ -154,7 +154,7 @@
 	   	}
 	}
 	.pickoneLogoArea {
-	   	padding: 5px;
+	   	padding: 10px;
 	    background-color: #F08646;
 	    display: inline-block;
 	    float: left;
@@ -165,7 +165,6 @@
 		    display: inline-block;
 		    img{
 		    	display: block;
-		    	margin-top: 8px;
 			    max-width: 100%;
 			    height: auto;
 			    vertical-align: middle;
@@ -176,9 +175,8 @@
 	    width: 150px;
 	    float: left;
 	    text-align: center;
-	    vertical-align: middle;
-	    .mt(17);
-	    .fs(12);
+	    .fs(14);
 	    color: #989696;
+			line-height: 50px;
 	}
 }
