--- a/less/style.less
+++ b/less/style.less
@@ -303,6 +303,7 @@ ul{
 }
 .container#mobileNavbarArea{
     text-align: center;
+    .mb(-1);
     .navbar-header{
         .mr(-15);
         .ml(-15);
