add select options

--- a/less/search.less
+++ b/less/search.less
@@ -84,6 +84,17 @@
 					    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 					    box-sizing: border-box;
 	    			}
+						input[type="checkbox"]{
+							width: 12px;
+							height: 12px;
+							border: 1px solid #aaa;
+							border-radius: 50%;
+							.ml(10);
+							outline: none;
+							&:checked{
+								background-color: #ec8443;
+							}
+						}
     			}
     		}
 			.btnSearch{
