change navbar component

--- a/less/bill.less
+++ b/less/bill.less
@@ -1,3 +1,44 @@
+.bill,.search,.single-place{
+	.navGary{
+		box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 5px;
+	    background-color: #fff;
+	    border: none;
+	   	.container{
+	   		 display: flex;
+		   	.part{
+					 flex: 1;
+		    }
+	   	}
+	}
+	.pickoneLogoArea {
+	   	padding: 10px;
+	    background-color: #F08646;
+	    display: inline-block;
+	    float: left;
+	    text-align: center;
+	    line-height: 1;
+	    .pickoneLogo {
+		   	width: 124px;
+		    display: inline-block;
+		    img{
+		    	display: block;
+			    max-width: 100%;
+			    height: auto;
+			    vertical-align: middle;
+		    }
+		}
+	}
+	.pickoneSlogan {
+	    width: 150px;
+	    float: left;
+	    text-align: center;
+	    .fs(14);
+	    color: #989696;
+			line-height: 50px;
+			white-space: nowrap;
+	}
+}
+
 .bill{
 	position: relative;
 	.pb(200);
@@ -141,43 +182,5 @@
 			background-color: #F08646;
     	color: #fff;
 		}
-	}
-	.navGary{
-		box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 5px;
-	    background-color: #fff;
-	    border: none;
-	   	.container{
-	   		 display: flex;
-		   	.part{
-					 flex: 1;
-		    }
-	   	}
-	}
-	.pickoneLogoArea {
-	   	padding: 10px;
-	    background-color: #F08646;
-	    display: inline-block;
-	    float: left;
-	    text-align: center;
-	    line-height: 1;
-	    .pickoneLogo {
-		   	width: 124px;
-		    display: inline-block;
-		    img{
-		    	display: block;
-			    max-width: 100%;
-			    height: auto;
-			    vertical-align: middle;
-		    }
-		}
-	}
-	.pickoneSlogan {
-	    width: 150px;
-	    float: left;
-	    text-align: center;
-	    .fs(14);
-	    color: #989696;
-			line-height: 50px;
-			white-space: nowrap;
 	}
 }
