--- a/less/style.less
+++ b/less/style.less
@@ -312,12 +312,13 @@ ul{
         text-decoration: none;
         height: 50px;
         display: block;
-        background-image: url(../images/logoWhite.png);
+        background-image: url(../images/gfwy.png);
         background-repeat: no-repeat;
         background-position: center center;
         background-color: #F08646;
         .background-size(120px);
         transition: background-color 1s, background-image 1s, width 0.3s;
+        background-size: 47%;
         em{
             display: none;
         }
