Fix checkbox outline style

--- a/less/bill.less
+++ b/less/bill.less
@@ -176,6 +176,15 @@
 			.fs(14);
 			.lh(23);
 			font-weight: 600;
+      input[type="checkbox"]{
+        .w(15);
+        .h(15);
+        border: 1px solid #ccc;
+        outline: none;
+        &:checked{
+          background-color: #ec8443;
+        }
+      }
 		}
 		.btnSearch{
 			.border-radius(18px);
